# FPOS

./: build.spec  client.py  launcher.py  main.py  pyproject.toml
.github/workflows/: build.yml
src/fpos/: __init__.py  agents.py  api.py  cli.py  launcher.py  models.py  orchestrator.py  store.py
tests/: test_core.py
